--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,10 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);
 @import url(https://fonts.googleapis.com/css?family=Arimo:400,700);
-
 
 
 
@@ -46,7 +46,7 @@ h6,
 .mbr-gallery-title,
 .mbr-map [data-state-details],
 .mbr-price {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
 .mbr-footer-content h1,
 .mbr-footer .mbr-contacts h1,
@@ -60,7 +60,7 @@ h6,
 .mbr-footer .mbr-contacts p strong,
 .mbr-footer-content strong,
 .mbr-footer .mbr-contacts strong {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
 .btn-sm,
 .lead a,
@@ -73,14 +73,14 @@ h6,
   font-style: normal;
 }
 .mbr-author-name {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
 .mbr-author-desc {
   font-family: 'Arimo', sans-serif;
   font-style: normal;
 }
 .mbr-plan-title {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'PT Sans', sans-serif;
 }
 .mbr-plan-subtitle,
 .mbr-plan-price-desc {
@@ -429,7 +429,8 @@ h6,
 }
 #menu-0 .navbar-caption {
   color: #ffffff;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 21px;
 }
 #menu-0 .navbar-toggler {
   color: #ffffff;
@@ -453,19 +454,19 @@ h6,
 }
 #menu-0 .link[aria-expanded="true"],
 #menu-0 .dropdown-menu {
-  background: #4d4d4d;
+  background: #141414;
 }
 #menu-0 .nav-dropdown-sm .link:focus,
 #menu-0 .nav-dropdown-sm .link:hover,
 #menu-0 .nav-dropdown-sm .dropdown-item:focus,
 #menu-0 .nav-dropdown-sm .dropdown-item:hover {
-  background: #5e5e5e!important;
+  background: #262626!important;
 }
 #menu-0 .navbar,
 #menu-0 .nav-dropdown-sm,
 #menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
 #menu-0 .nav-dropdown-sm .dropdown-menu {
-  background: #666666;
+  background: #2e2e2e;
 }
 #menu-0 .bg-color.transparent .link {
   color: #ffffff;
@@ -517,16 +518,6 @@ h6,
 #form1-4 .form-control-label {
   color: #232323;
 }
-#contacts1-6 STRONG {
-  text-align: right;
-  font-family: 'Open Sans', sans-serif;
-}
-#contacts1-6 P {
-  text-align: right;
-}
-#contacts1-6 SPAN {
-  text-align: right;
-}
 #social-buttons3-8 .mbr-section-title,
 #social-buttons3-8 .btn-social {
   color: #fff;
@@ -534,7 +525,7 @@ h6,
 #social-buttons3-8 .mbr-section-title {
   font-size: 32px;
   text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 #menu-0 .hide-buttons .nav-btn {
@@ -542,7 +533,8 @@ h6,
 }
 #menu-0 .navbar-caption {
   color: #ffffff;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 21px;
 }
 #menu-0 .navbar-toggler {
   color: #ffffff;
@@ -566,19 +558,19 @@ h6,
 }
 #menu-0 .link[aria-expanded="true"],
 #menu-0 .dropdown-menu {
-  background: #1f1f1f;
+  background: #141414;
 }
 #menu-0 .nav-dropdown-sm .link:focus,
 #menu-0 .nav-dropdown-sm .link:hover,
 #menu-0 .nav-dropdown-sm .dropdown-item:focus,
 #menu-0 .nav-dropdown-sm .dropdown-item:hover {
-  background: #313030!important;
+  background: #262626!important;
 }
 #menu-0 .navbar,
 #menu-0 .nav-dropdown-sm,
 #menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
 #menu-0 .nav-dropdown-sm .dropdown-menu {
-  background: #393838;
+  background: #2e2e2e;
 }
 #menu-0 .bg-color.transparent .link {
   color: #ffffff;
